1. Proxy classes were created for schema elements. 2. Record iterators were reimplemented.